--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ footer .nav-links li a:hover {
 		float: none;
 	}
 
-  /*footer*/
+  /*Footer*/
   footer .nav-links {
     text-align: center;
     font-size: 13px;
@@ -328,6 +328,12 @@ footer .nav-links li a:hover {
     text-align: center;
     font-size: 10px;
     margin: 5px 0;
-}
-}
+	}
 
+	/*Students*/
+	.img-flex img {
+		width: 47%;
+		height: 50%;
+	}
+
+}
