--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ h1, h2{
 	background: linear-gradient(135deg, rgba(20,233,183,1) 0%, rgba(10,216,227,1) 100%);
 	display: inline-block;
 	width: 30%;
-	padding: 95px 40px 100px 60px;
+	padding: 95px 3% 100px 7%;
 }
 .objectives li {
   list-style-type: initial;
@@ -235,8 +235,8 @@ h1, h2{
 /* Schedule */
 .schedule {
 	display: inline-block;
-	width: 50%;
-	padding: 90px 70px 80px;
+	width: 49%;
+	padding: 90px 5% 80px;
 	vertical-align: top;
 }
 
@@ -342,7 +342,11 @@ footer .nav-links li a:hover {
     font-size: 13px;
   }
   footer .nav-links li {
+    text-align: center;
     padding: 25px 5px;
+  }
+  footer nav {
+    text-align: center;
   }
   .footer-copy {
     text-align: center;
