--- a/style.css
+++ b/style.css
@@ -227,6 +227,7 @@ header div img {
   color: #14e9b6; }
 
 /* Current Students */
+/* Current Students */
 .current-students .mono {
   width: 40%; }
 
@@ -243,6 +244,7 @@ header div img {
 .suprise {
   visibility: hidden; }
 
+/* Footer */
 /* Footer */
 footer {
   width: 90%;
