--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -7,11 +7,7 @@ footer {
 .gradient-bar {
   width: 100%;
   height: 5px;
-  background: rgba(20,233,183,1);
-  background: -moz-linear-gradient(-45deg, rgba(20,233,183,1) 0%, rgba(10,216,227,1) 100%);
-  background: -webkit-linear-gradient(-45deg, rgba(20,233,183,1) 0%, rgba(10,216,227,1) 100%);
-  background: -ms-linear-gradient(-45deg, rgba(20,233,183,1) 0%, rgba(10,216,227,1) 100%);
-  background: linear-gradient(135deg, rgba(20,233,183,1) 0%, rgba(10,216,227,1) 100%);
+  @include gradient;
 }
 
 footer .nav-links {
